# polybar-now-playing

./: Cargo.toml  LICENSE  default_config.yaml  justfile
src/: config.rs  main.rs
