[package]
name = "now_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
unicode-width = "0.1"
zbus = { version = "3.0" }
anyhow = "1.0"
serde = "1.0"
serde_yaml = "0.9"
